# ra_type_inference_error

./: .gitignore  Cargo.toml
src/: component.rs  entities.rs  generational_index_array.rs  main.rs
