[package]
name = "clockwork"
version = "0.1.0"
authors = ["Jack Spira <jjspira@gmail.com>"]
edition = "2018"

[features]
metal = ["gfx-backend-metal"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]

[dependencies]
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.40"
serde_yaml = "0.8.9"
gfx-hal = "0.3.1"

[dependencies.gfx-backend-vulkan]
version = "0.3"
optional = true
features = ["winit"]

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
version = "0.3"
optional = true
features = ["winit"]

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.3"
optional = true
features = ["winit"]
